# minidispatch

./: .gitignore  AGENTS.md  LICENSE  pyproject.toml
scripts/: setup_test_env.py
src/minidispatch/: __init__.py  main.py
src/minidispatch/cli/: config.py  daemon.py  job.py  jobs.py  kill.py  runs.py  submit.py
src/minidispatch/core/: constants.py  daemon.py  utils.py
src/minidispatch/db/: jobnames.py  manager.py  sql.py
src/minidispatch/internal/: daemon.py  test_env.py
tests/: conftest.py
tests/01_general/: test_00_imports.py  test_01_sql_strings.py  test_02_jobnames.py  test_03_utils.py  test_04_db_manager.py
tests/02_cli/: test_00_cli_smoke.py  test_01_cli_jobs_and_runs.py  test_02_cli_submit_and_kill.py  test_03_cli_daemon.py
